--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
-</head>
+<% layout('./layout/boilerplates') -%><body>
 <body>
     <h3>Edit a listing</h3>
     <form method="POST" action="/listings/<%= data._id %>?_method=PUT"> 
@@ -22,4 +16,3 @@
         <button>Submit</button>
     </form>
 </body>
-</html>
