--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listings</title>
-</head>
-<body>
+<% layout('./layout/boilerplates') -%><body>
     <h1>Listings </h1>
     <ul>
         <% for(list of allListing){ %>
@@ -14,4 +7,3 @@
         <% } %>
     </ul>
 </body>
-</html>
