--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show One Item</title>
-</head>
+<% layout('./layout/boilerplates') -%><body>
 <body>
     <h3>Listing Details</h3>
     <form method="GET" action="/listings/new">
@@ -29,4 +23,3 @@
         <button>Delete</button>
     </form>
 </body>
-</html>
