--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
-body{
-    background-color: rgb(105, 87, 121);
-    color: white;
+.navbar{
+    height: 5rem;
+    background: white;
 }
-a{
-    text-decoration: none;
-    color: white;
-    text-decoration: underline;
+.fa-compass{
+    font-size: larger;
+    color: rgb(255, 0, 0);
+}
+.nav-link{
+    color: black !important;
 }
