--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,18 +1,38 @@
 <% layout('./layout/boilerplates') -%><body>
 <body>
-    <h3>Edit a listing</h3>
-    <form method="POST" action="/listings/<%= data._id %>?_method=PUT"> 
-        <input value="<%= data.title %>" type="text" name="listing[title]" placeholder="Enter the title">
-        <br><br>
-        <textarea  type="listing[description]" name="description" placeholder="Enter the description"><%= data.description %></textarea>
-        <br><br>
-        <input value="<%= data.image %>" type="text" name="listing[image]" placeholder="Enter the image url/link">
-        <br><br>
-        <input value="<%= data.price %>" type="number" name="listing[price]" placeholder="Enter the price ">
-        <br><br>
-        <input value="<%= data.location %>" type="text" name="listing[location]" placeholder="Enter the location ">
-        <br><br>
-        <input value="<%= data.country %>" type="text" name="listing[country]" placeholder="Enter the country ">
-        <button>Submit</button>
-    </form>
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Edit a listing</h3>
+        <form method="POST" action="/listings/<%= data._id %>?_method=PUT"> 
+            <div class="md-3">
+                <label for="title" class="form-label">Title : </label>
+                <input class="form-control" value="<%= data.title %>" type="text" name="listing[title]" placeholder="Enter the title"><br>
+            </div>
+            <div class="md-3">
+                <label for="title" class="form-label">Description : </label>
+                <textarea class="form-control"  type="listing[description]" name="description" placeholder="Enter the description"><%= data.description %></textarea><br>
+            </div>
+            <div class="md-3">
+                <label for="title" class="form-label">Image : </label>
+                <input class="form-control" value="<%= data.image %>" type="text" name="listing[image]" placeholder="Enter the image url/link"><br>
+            </div>
+            <div class="row">
+                <div class="md-3 col-md-4">
+                    <label for="title" class="form-label">Price : </label>
+                    <input class="form-control" value="<%= data.price %>" type="number" name="listing[price]" placeholder="Enter the price "><br>
+                </div>
+                <div class="md-3 col-md-8">
+                    <label for="title" class="form-label">Country : </label>
+                    <input class="form-control" value="<%= data.country %>" type="text" name="listing[country]" placeholder="Enter the country ">
+                </div>
+            </div>
+            <div class="md-3">
+                <label for="title" class="form-label">Location : </label>
+                <input class="form-control" value="<%= data.location %>" type="text" name="listing[location]" placeholder="Enter the location "><br>
+            </div>
+            <br>
+            <button class="btn btn-dark">Submit</button>
+        </form>
+        </div>
+    </div>
 </body>
