--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,7 +4,7 @@
   <div class="allCards rows-cols-lg-3 rows-cols-md-2 rows-cols-sm-1">
     <% for(list of allListing){ %>
         <div class="card" style="width: 19rem ">
-            <img src="<%= list.image %>" class="card-img-top" style="height:20rem" alt="House Imge" />
+            <img src="<%= list.image %>" class="card-img card-img-top" style="height:20rem" alt="House Imge" />
             <!-- <div class="card-img-overlay"><b>See Photos</b></div> -->
             <div class="card-body">
             <h5 class="card-title"><%= list.title %></h5>
