--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,25 +1,36 @@
 <% layout('./layout/boilerplates') -%><body>
 <body>
     <h3>Listing Details</h3>
-    <form method="GET" action="/listings/new">
+    <!-- <form method="GET" action="/listings/new">
         <button>Create new listing</button>
-    </form>
-    <ul>
-        <li><%= list.title %></li>
-        <li><%= list.description %></li>
-        <li><span>&#8377;</span><%= list.price.toLocaleString("en-IN") %></li>
-        <li><%= list.location %></li>
-        <li><%= list.country %></li>
-    </ul>
+    </form> -->
+    <div class="card" style="width: 50rem;">
+        <img src="<%= list.image %>" class="card-img-top cardShow-img-top" style="height: 30rem;" alt="image">
+        <div class="card-body">
+            <h5 class="card-title"><%= list.title %></h5>
+            <p class="card-text"><%= list.description %></p>
+            <ul>
+                <li class="card-text"><%= list.title %></li>
+                <li class="card-text"><%= list.description %></li>
+                <li class="card-text"><span>&#8377;</span><%= list.price.toLocaleString("en-IN") %></li>
+                <li class="card-text"><%= list.location %></li>
+                <li class="card-text"><%= list.country %></li>
+            </ul>
+            <!-- <a href="">Delete</a> -->
+            <div style="display: flex; ">
+                <form style="margin-right: 2rem; margin-left: .2rem;" method="get" action="/listings/<%= list._id %>/edit">
+                    <button>Edit</button>
+                </form>
+                <br>
+                <form method="get" action="/listings/<%= list._id %>/delete">
+                    <button>Delete</button>
+                </form>
+            </div>
+        </div>
+      </div>
+    
     <br>
     <!-- <a href="/listings/<%= list._id %>/edit">Edit</a> -->
     <br>
-    <!-- <a href="">Delete</a> -->
-    <form method="get" action="/listings/<%= list._id %>/edit">
-        <button>Edit</button>
-    </form>
-    <br>
-    <form method="get" action="/listings/<%= list._id %>/delete">
-        <button>Delete</button>
-    </form>
+    
 </body>
