--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -6,10 +6,14 @@
             <form method="post" action="/listings" class="needs-validation" novalidate> 
                 <div class="mb-3"><label class="form-label" for="title">Title : </label>
                     <input required class="form-control" type="text" name="listing[title]" placeholder="Enter the title">
+                    <div class="valid-feedback">Looks Good!</div>
+                    <div class="invalid-feedback">Please Enter A Title</div>
                 </div>
                 <!-- <br><br> -->
                 <div class="mb-3"><label class="form-label" for="description">Description : </label>
                     <textarea required class="form-control" type="listing[description]" name="description" placeholder="Enter the description"></textarea>
+                    <div class="valid-feedback">Nice Description</div>
+                    <div class="invalid-feedback">Please Enter A Description</div>
                 </div>
                 <!-- <br><br> -->
                 <div class="mb-3"><label class="form-label" for="image">Image : </label>
@@ -19,14 +23,20 @@
                 <div class="row">
                     <div class="mb-3 col-md-4"><label class="form-label" for="price">Price : </label>
                         <input required class="form-control" type="number" name="listing[price]" placeholder="Enter the price ">
+                        <div class="valid-feedback">&#9989; </div>
+                        <div class="invalid-feedback">Please Enter A Valid Price</div>
                     </div>
                     <!-- <br><br> -->
                     <div class="mb-3 col-md-8"><label class="form-label" for="country">Country : </label>
                         <input required class="form-control" type="text" name="listing[country]" placeholder="Enter the country ">
+                        <div class="valid-feedback">&#9989; </div>
+                        <div class="invalid-feedback">Please Enter A Valid Country</div>
                     </div>
                 </div>
                 <div class="mb-3"><label class="form-label" for="location">Location : </label>
                     <input required class="form-control" type="text" name="listing[location]" placeholder="Enter the location ">
+                    <div class="valid-feedback">&#9989; </div>
+                    <div class="invalid-feedback">Please Enter A Valid Location</div>
                 </div>
                 <!-- <br><br> -->
                 <br>
