--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,14 +3,20 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
             <h3>Edit a listing</h3>
-        <form method="POST" action="/listings/<%= data._id %>?_method=PUT"> 
+        <form method="POST" action="/listings/<%= data._id %>?_method=PUT" class="needs-validation" novalidate> 
             <div class="md-3">
                 <label for="title" class="form-label">Title : </label>
-                <input class="form-control" value="<%= data.title %>" type="text" name="listing[title]" placeholder="Enter the title"><br>
+                <input required class="form-control" value="<%= data.title %>" type="text" name="listing[title]" placeholder="Enter the title">
+                <div class="valid-feedback">Looks Good!</div>
+                <div class="invalid-feedback">Please Enter A Title</div>
+                <br>
             </div>
             <div class="md-3">
                 <label for="title" class="form-label">Description : </label>
-                <textarea class="form-control"  type="listing[description]" name="description" placeholder="Enter the description"><%= data.description %></textarea><br>
+                <textarea required class="form-control"  type="listing[description]" name="description" placeholder="Enter the description"><%= data.description %></textarea>
+                <div class="valid-feedback">Nice Description</div>
+                <div class="invalid-feedback">Please Enter A Description</div>
+                <br>
             </div>
             <div class="md-3">
                 <label for="title" class="form-label">Image : </label>
@@ -19,16 +25,20 @@
             <div class="row">
                 <div class="md-3 col-md-4">
                     <label for="title" class="form-label">Price : </label>
-                    <input class="form-control" value="<%= data.price %>" type="number" name="listing[price]" placeholder="Enter the price "><br>
+                    <input required class="form-control" value="<%= data.price %>" type="number" name="listing[price]" placeholder="Enter the price ">
+                    <div class="invalid-feedback">Please Enter A Valid Price</div>
+                    <br>
                 </div>
                 <div class="md-3 col-md-8">
                     <label for="title" class="form-label">Country : </label>
-                    <input class="form-control" value="<%= data.country %>" type="text" name="listing[country]" placeholder="Enter the country ">
+                    <input required class="form-control" value="<%= data.country %>" type="text" name="listing[country]" placeholder="Enter the country ">
+                    <div class="invalid-feedback">Please Enter A Valid Country</div>
                 </div>
             </div>
             <div class="md-3">
                 <label for="title" class="form-label">Location : </label>
-                <input class="form-control" value="<%= data.location %>" type="text" name="listing[location]" placeholder="Enter the location "><br>
+                <input required class="form-control" value="<%= data.location %>" type="text" name="listing[location]" placeholder="Enter the location "><br>
+                <div class="invalid-feedback">Please Enter A Valid Location</div>
             </div>
             <br>
             <button class="btn btn-dark">Submit</button>
