resolving the mini error

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -22,7 +22,7 @@
                 <!-- <br><br> -->
                 <div class="row">
                     <div class="mb-3 col-md-4"><label class="form-label" for="price">Price : </label>
-                        <input required class="form-control" type="number" name="listing[price]" placeholder="Enter the price ">
+                        <input required class="form-control" type="text" name="listing[price]" placeholder="Enter the price ">
                         <div class="valid-feedback">&#9989; </div>
                         <div class="invalid-feedback">Please Enter A Valid Price</div>
                     </div>
