--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -1,5 +1,5 @@
 <% layout('./layout/boilerplates') -%><body>
 <body>
     <br>
-    <h1>Welcome To Wanderlust</h1>
+    <h1 style="display: flex; justify-content: center; margin-top: 10rem;">Welcome To Wanderlust</h1>
 </body>
