--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -9,10 +9,10 @@
       <% for(list of allListing){ %>
         <div class="card" >
             <a href="/listings/<%= list._id %>" class="mainA">
-              <img src="<%= list.image %>" class="card-img card-img-top" alt="House Imge" />
+              <img src="<%= list.image %>" class="card-imgg card-img-top" alt="House Imge" />
               <!-- <div class="card-img-overlay"><b>See Photos</b></div> -->
               <div class="card-body">
-              <h5 class="card-title"><%= list.title %></h5>
+              <p style="font-size: large;" class="card-title"><%= list.title %></p>
               <p class="card-price">Price : <%= Number(list.price).toLocaleString("en-IN") %>/Day</p>
               <!-- <p class="card-text"><%= list.description %></p> -->
               <!-- anchor tag will reflect to get request with the listed post id -->
