--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -24,31 +24,31 @@
                 <br>
             </div>
             <div class="md-3">
-                <label for="title" class="form-label">Description : </label>
-                <textarea required class="form-control"  type="listing[description]" name="description" placeholder="Enter the description"><%= data.description %></textarea>
+                <label for="description" class="form-label">Description: </label>
+                <textarea required class="form-control" name="listing[description]" id="description" placeholder="Enter the description"><%= data.description %></textarea>
                 <div class="valid-feedback">Nice Description</div>
                 <div class="invalid-feedback">Please Enter A Description</div>
                 <br>
             </div>
             <div class="md-3">
-                <label for="title" class="form-label">Image : </label>
+                <label for="image" class="form-label">Image : </label>
                 <input class="form-control" value="<%= data.image %>" type="text" name="listing[image]" placeholder="Enter the image url/link"><br>
             </div>
             <div class="row">
                 <div class="md-3 col-md-4">
-                    <label for="title" class="form-label">Price : </label>
+                    <label for="price" class="form-label">Price : </label>
                     <input required class="form-control" value="<%= data.price %>" type="number" name="listing[price]" placeholder="Enter the price ">
                     <div class="invalid-feedback">Please Enter A Valid Price</div>
                     <br>
                 </div>
                 <div class="md-3 col-md-8">
-                    <label for="title" class="form-label">Country : </label>
+                    <label for="country" class="form-label">Country : </label>
                     <input required class="form-control" value="<%= data.country %>" type="text" name="listing[country]" placeholder="Enter the country ">
                     <div class="invalid-feedback">Please Enter A Valid Country</div>
                 </div>
             </div>
             <div class="md-3">
-                <label for="title" class="form-label">Location : </label>
+                <label for="location" class="form-label">Location : </label>
                 <input required class="form-control" value="<%= data.location %>" type="text" name="listing[location]" placeholder="Enter the location "><br>
                 <div class="invalid-feedback">Please Enter A Valid Location</div>
             </div>
