--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,36 +5,37 @@
             <h3>Create a new listing</h3>
             <form method="post" action="/listings" class="needs-validation" novalidate> 
                 <div class="mb-3"><label class="form-label" for="title">Title : </label>
-                    <input required class="form-control" type="text" name="listing[title]" placeholder="Enter the title">
+                    <input required class="form-control" type="text" id="title" name="listing[title]" placeholder="Enter the title">
                     <div class="valid-feedback">Looks Good!</div>
                     <div class="invalid-feedback">Please Enter A Title</div>
                 </div>
                 <!-- <br><br> -->
-                <div class="mb-3"><label class="form-label" for="description">Description : </label>
-                    <textarea required class="form-control" type="listing[description]" name="description" placeholder="Enter the description"></textarea>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description : </label>
+                    <textarea required class="form-control" name="listing[description]" id="description" placeholder="Enter the description"></textarea>
                     <div class="valid-feedback">Nice Description</div>
                     <div class="invalid-feedback">Please Enter A Description</div>
                 </div>
                 <!-- <br><br> -->
                 <div class="mb-3"><label class="form-label" for="image">Image : </label>
-                    <input  class="form-control" type="text" name="listing[image]" placeholder="Enter the image url/link">
+                    <input  class="form-control" type="text" id="image" name="listing[image]" placeholder="Enter the image url/link">
                 </div>
                 <!-- <br><br> -->
                 <div class="row">
                     <div class="mb-3 col-md-4"><label class="form-label" for="price">Price : </label>
-                        <input required class="form-control" type="text" name="listing[price]" placeholder="Enter the price ">
+                        <input required class="form-control" type="text" id="price" name="listing[price]" placeholder="Enter the price ">
                         <div class="valid-feedback">&#9989; </div>
                         <div class="invalid-feedback">Please Enter A Valid Price</div>
                     </div>
                     <!-- <br><br> -->
                     <div class="mb-3 col-md-8"><label class="form-label" for="country">Country : </label>
-                        <input required class="form-control" type="text" name="listing[country]" placeholder="Enter the country ">
+                        <input required class="form-control" type="text" id="country" name="listing[country]" placeholder="Enter the country ">
                         <div class="valid-feedback">&#9989; </div>
                         <div class="invalid-feedback">Please Enter A Valid Country</div>
                     </div>
                 </div>
                 <div class="mb-3"><label class="form-label" for="location">Location : </label>
-                    <input required class="form-control" type="text" name="listing[location]" placeholder="Enter the location ">
+                    <input required class="form-control" type="text" id="location" name="listing[location]" placeholder="Enter the location ">
                     <div class="valid-feedback">&#9989; </div>
                     <div class="invalid-feedback">Please Enter A Valid Location</div>
                 </div>
