--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,14 +20,14 @@
     }
 </style>
 <body>
-    <h3>Listing Details</h3>
+    <h3><%= list.title %></h3>
     <!-- <form method="GET" action="/listings/new">
         <button>Create new listing</button>
     </form> -->
     <div class="card showCard ">
         <img src="<%= list.image %>" class="card-img-top cardShow-img-top" alt="image">
         <div class="card-body">
-            <h5 class="card-title"><%= list.title %></h5>
+            <!-- <h5 class="card-title"><%= list.title %></h5> -->
             <p class="card-text"><%= list.description %></p>
             <ul>
                 <li class="card-text"><%= list.title %></li>
