--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -39,13 +39,29 @@
             <!-- <a href="">Delete</a> -->
             <div style="display: flex; ">
                 <form style="margin-right: 2rem; margin-left: .2rem;" method="get" action="/listings/<%= list._id %>/edit">
-                    <button>Edit</button>
+                    <button class="btn btn-outline-dark">Edit</button>
                 </form>
                 <br>
                 <form method="get" action="/listings/<%= list._id %>/delete">
-                    <button>Delete</button>
+                    <button class="btn btn-outline-dark">Delete</button>
                 </form>
             </div>
+        </div>
+        <hr>
+        <div class="mb-3 mt-3">
+            <h4>Leave a Review</h4>
+            <form  action="">
+                <div class=" mt-3">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="comment">Comment</label>
+                    <textarea class="form-control" type="text" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+                </div> 
+                <!-- <br> -->
+                <button class="btn btn-outline-dark">Submit</button>
+            </form>
         </div>
       </div>
     
