--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -50,19 +50,18 @@
         <hr>
         <div class="mb-3 mt-3">
             <h4>Leave a Review</h4>
-            <form  action="">
-                <div class=" mt-3">
+            <form method="POST" action="/listings/<%= list.id %>/review">
+                <div class="mt-3">
                     <label class="form-label" for="rating">Rating</label>
                     <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="comment">Comment</label>
-                    <textarea class="form-control" type="text" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+                    <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
                 </div> 
-                <!-- <br> -->
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
-        </div>
+        </div>        
       </div>
     
     <br>
