--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@ body{
     flex-wrap: wrap;
 }
 
-.card,.cardShow{
+.listing-card,.cardShow{
     border: none !important;
     margin: auto;
     width: auto;
