--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
   <% } else{  %>
     <div class="allCards rows-cols-lg-3 rows-cols-md-2 rows-cols-sm-1">
       <% for(list of allListing){ %>
-        <div class="card" >
+        <div class="card listing-card" >
             <a href="/listings/<%= list._id %>" class="mainA">
               <img src="<%= list.image %>" class="card-imgg card-img-top" alt="House Imge" />
               <!-- <div class="card-img-overlay"><b>See Photos</b></div> -->
