--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -24,7 +24,7 @@
     <!-- <form method="GET" action="/listings/new">
         <button>Create new listing</button>
     </form> -->
-    <div class="card showCard ">
+    <div class="card listing-card showCard ">
         <img src="<%= list.image %>" class="card-img-top cardShow-img-top" alt="image">
         <div class="card-body">
             <!-- <h5 class="card-title"><%= list.title %></h5> -->
@@ -50,22 +50,35 @@
         <hr>
         <div class="mb-3 mt-3">
             <h4>Leave a Review</h4>
-            <form method="POST" action="/listings/<%= list.id %>/review">
+            <form method="POST" action="/listings/<%= list.id %>/review" novalidate class="needs-validation">
                 <div class="mt-3">
                     <label class="form-label" for="rating">Rating</label>
                     <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="comment">Comment</label>
-                    <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+                    <textarea required class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+                    <div class="valid-feedback">&#9989; </div>
+                    <div class="invalid-feedback">Please Enter A Valid Feedback</div>
                 </div> 
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
         </div>        
+        <hr>
+        <p><b>All Reviews</b></p>
+        <div class="row">
+            <% for(review of list.reviews) { %>
+                <div class="card col-5 ms-3 mb-3 ">
+                    <div class="card-body">
+                        <h5 class="card-title">Sudhanshu Mishra</h5>
+                        <h5 class="card-text"><%= review.comment %></h5>
+                        <p class="card-text" > <%= review.rating %>Stars</p>
+                    </div>
+                    <form class="mb-3" action="/listings/<%= list._id%>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-dark" >Delete</button>
+                    </form>
+                </div>
+            <% } %>
+        </div>
       </div>
-    
-    <br>
-    <!-- <a href="/listings/<%= list._id %>/edit">Edit</a> -->
-    <br>
-    
 </body>
