--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -68,13 +68,13 @@
         <p><b>All Reviews</b></p>
         <div class="row">
             <% for(review of list.reviews) { %>
-                <div class="card col-5 ms-3 mb-3 ">
+                <div class="card col-12 col-md-10 col-lg-5 ms-lg-4 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Sudhanshu Mishra</h5>
-                        <h5 class="card-text"><%= review.comment %></h5>
-                        <p class="card-text" > <%= review.rating %>Stars</p>
+                        <p class="card-title">Sudhanshu Mishra</p>
+                        <p class="card-text"><%= review.comment %></p>
+                        <p class="card-text" > <%= review.rating %> Stars</p>
                     </div>
-                    <form class="mb-3" action="/listings/<%= list._id%>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                    <form class="mb-3" action="/listings/<%= list._id%>/review/<%= review._id %>?_method=DELETE" method="POST">
                         <button class="btn btn-sm btn-dark" >Delete</button>
                     </form>
                 </div>
