--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -7,16 +7,19 @@
                 <label for="username" class="form-label">Username</label>
                 <input type="text" id="username"  name="username" class="form-control" placeholder="Enter your username" required>
                 <div class="valid-feedback">Looks Good</div>
+                <div class="invalid-feedback">Username is required</div>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" id="email"  name="email" class="form-control" placeholder="Enter your email" required>
                 <div class="valid-feedback">Looks Good</div>
+                <div class="invalid-feedback">Email is required</div>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" id="password"  name="password" class="form-control" placeholder="Enter your password" required>
                 <div class="valid-feedback">Looks Good</div>
+                <div class="invalid-feedback">Password is required</div>
             </div>
             <button class="btn btn-success">Signup</button>
         </form>
