added shortcut of signup page in navbar

--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -22,6 +22,7 @@
                 <div class="invalid-feedback">Password is required</div>
             </div>
             <button class="btn btn-success">Signup</button>
+            <a class="btn btn-success" href="/login">Login</a>
         </form>
     </div>
 </div>
