--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,6 +10,7 @@
           <a class="nav-link" href="/">Home</a>
           <a class="nav-link" href="/listings">All Listing</a>
           <a class="nav-link" href="/listings/new">Add New Listing</a>
+          <a class="nav-link" href="/signup">Signup</a>
         </div>
       </div>
     </div>
