--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout('./layout/boilerplates') -%><body>
     <div class="row mt-3">
-        <h1 class="col-6 offset-4">login On Wanderlust</h1>
-        <div class="col-6 offset-3">
+        <h2 style="text-decoration: underline red;" class="col-8 offset-4">Login</h2>
+        <div class="col-8 offset-2">
             <form action="/login" method="post" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
@@ -22,6 +22,8 @@
                     <div class="invalid-feedback">Password is required</div>
                 </div>
                 <button class="btn btn-success">login</button>
+                <a class="btn btn-success" href="/signup">Signup</a>
             </form>
         </div>
     </div>
+    
