--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,7 +1,7 @@
 <% layout('./layout/boilerplates') -%><body>
 <div class="row mt-3">
-    <h1 class="col-6 offset-4">Signup On Wanderlust</h1>
-    <div class="col-6 offset-3">
+    <h2 style="text-decoration: underline red;" class="col-6 offset-4">Signup</h2>
+    <div class="col-8 offset-2">
         <form action="/signup" method="post" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
