changed the login button color

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -22,7 +22,7 @@
                     <div class="invalid-feedback">Password is required</div>
                 </div>
                 <button class="btn btn-success">login</button>
-                <a class="btn btn-success" href="/signup">Signup</a>
+                <a class="btn btn-danger" href="/signup">Signup</a>
             </form>
         </div>
     </div>
