--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -22,7 +22,7 @@
                 <div class="invalid-feedback">Password is required</div>
             </div>
             <button class="btn btn-success">Signup</button>
-            <a class="btn btn-success" href="/login">Login</a>
+            <a class="btn btn-danger" href="/login">Login</a>
         </form>
     </div>
 </div>
