--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,6 +11,8 @@
           <a class="nav-link" href="/listings">All Listing</a>
           <a class="nav-link" href="/listings/new">Add New Listing</a>
           <a class="nav-link" href="/signup">Signup</a>
+          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/logout">Logout</a>
         </div>
       </div>
     </div>
