--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,9 +10,15 @@
           <a class="nav-link" href="/">Home</a>
           <a class="nav-link" href="/listings">All Listing</a>
           <a class="nav-link" href="/listings/new">Add New Listing</a>
+        </div>
+        <div class="navbar-nav ms-auto">
+          <% if(!currUser){ %>
           <a class="nav-link" href="/signup">Signup</a>
           <a class="nav-link" href="/login">Login</a>
-          <a class="nav-link" href="/logout">Logout</a>
+          <% } %>
+          <% if(currUser){ %>
+            <a class="nav-link" href="/logout">Logout</a>
+          <% } %>
         </div>
       </div>
     </div>
