added authorization edit and delete user can see only the these button

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -38,15 +38,19 @@
             </div>
             <br>
             <!-- <a href="">Delete</a> -->
-            <div style="display: flex; ">
-                <form style="margin-right: 2rem; margin-left: .2rem;" method="get" action="/listings/<%= list._id %>/edit">
-                    <button class="btn btn-outline-dark">Edit</button>
-                </form>
-                <br>
-                <form method="get" action="/listings/<%= list._id %>/delete">
-                    <button class="btn btn-outline-dark">Delete</button>
-                </form>
-            </div>
+            <!-- <% console.log(currUser._id); %>
+            <% console.log(list.owner._id); %> -->
+            <% if(currUser && currUser._id.equals(list.owner._id)){ %>
+                <div style="display: flex; ">
+                    <form style="margin-right: 2rem; margin-left: .2rem;" method="get" action="/listings/<%= list._id %>/edit">
+                        <button class="btn btn-dark">Edit</button>
+                    </form>
+                    <br>
+                    <form method="get" action="/listings/<%= list._id %>/delete">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            <% } %>
         </div>
         <hr>
         <div class="mb-3 mt-3">
