--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -52,7 +52,7 @@
         </div>
         <hr>
         <% if(!currUser){ %>
-            <h4 class="cols-4 offset-4">Login For Add Review</h4>
+            <h4 class="cols-lg-4 offset-lg-4">Login For Add Review</h4>
         <% } %>
         <% if(currUser){ %>       
             <div class="mb-3 mt-3">
