set up edit page to show old images

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -31,6 +31,11 @@
                 <br>
             </div>
             <div class="md-3">
+                <p for="image" class="form-label">Original Image : </p>
+                <img src="<%= originalImageUrl %>" alt="Image">
+                <br><br>
+            </div>
+            <div class="md-3">
                 <!-- <label for="image" class="form-label">Image : </label> -->
                 <input required class="form-control"  type="file" name="listing[image]" placeholder="Upload New Image"><br>
             </div>
